CommentService 쿼리 최적화